# M1_IA_XRAY

./: Makefile  README.md  pyproject.toml  requirements.txt
chest_x_ray_images_(pneumonia)/: __init__.py  dataset.py  features.py  plots.py
chest_x_ray_images_(pneumonia)/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: meilleur_modele_roc_1_1.h5  meilleur_modele_roc_2_1.h5
notebooks/: 1.0-aut-initial-data-exploration.ipynb  1.1_1-aut-model-2-class.ipynb  1.1_2-aut-model-2-class.ipynb  1.2_1-aut-model-3-class.ipynb  1.2_2-aut-model-3-class.ipynb  1.2_3-aut-model-3-class.ipynb  1.3-aut-wilcoxon.ipynb  1.4-aut-vald.ipynb  1_1_resultatsROC.txt  1_2_resultatsROC.txt  2_1_resultatsROC.txt  2_2_resultatsROC.txt  codigo.py  resultatsROC_1_1.txt  resultatsROC_1_2.txt  resultatsROC_2_1.txt  resultatsROC_2_2.txt  resultatsROC_2_3.txt
src/: train_best_model.py  vald.py
